Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54425

QLineEdit does not show clear button when clearButtonEnabled is true OSX Yosemite

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.6.1, 5.7.0
    • Widgets: Styles
    • None
    • OS X
    • macOS
    • 25db59d7723c3d05ff55104768da31b0a7ce68ee (qtbase/5.6, 1.7.2016, 5.6.2)

    Description

      I have a QLineEdit widget with setClearButtonEnabled(true).

      When I compile the program in Qt 5.6.0 and in previous versions I see the clear button:
      https://gyazo.com/6283fa31dcccf1af82f91b9c0572dd4b

      When I compile it in Qt 5.6.1 and 5.7.0 I see no button:
      https://gyazo.com/bf49a1881cfa18fb7b5e1febb4e04714

      This bug appears on OSX Yosemite. On Windows 7 it works as expected.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              kusharami Alexandra Cherdantseva
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes