Fix QLineEdit not showing clear button on macOS

Restore code path returning the resource pixmap for platforms
that do not have themes in QCommonStyle.
Amends change b657496a0ba326af0688e9935069139c002849cf.

Task-number: QTBUG-54425
Change-Id: I764408622b825b86afbe7ccf37e1498d3efb3850
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>